--- a/neighborhood.html
+++ b/neighborhood.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+  <a class="skip-link" href="#main-content">Skip to main content</a>
   <header>
-    <nav>
+    <nav aria-label="Primary navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
@@ -22,7 +23,7 @@
     <h1>Neighborhood Walks</h1>
   </header>
   <main>
-    <div>
+    <div class="gallery" id="main-content">
       <img src="images/bend_in_the_road.png"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
       <img src="images/pink_blossoms.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
