--- a/parks.html
+++ b/parks.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+  <a class="skip-link" href="#main-content">Skip to main content</a>
   <header>
-    <nav>
+    <nav aria-label="Primary navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
@@ -23,7 +24,7 @@
 
   </header>
   <main>
-    <div>
+    <div class="gallery" id="main-content">
       <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
       <img src="images/bacon_near_the_fort.png"
